[package]
name = "gaffer-xdp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
network-types = "0.0.5"
gaffer-xdp-common = { path = "../gaffer-xdp-common" }
etherparse = { version = "0.14.3", default-features = false }
fnv = { version = "1.0.3", default-features = false }

[[bin]]
name = "gaffer-xdp"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
